Fixed alignment

--- a/mandiant-stix-app/src/components/DataTable.css
+++ b/mandiant-stix-app/src/components/DataTable.css
@@ -9,7 +9,7 @@
 
 .logo {
     width: 200px;
-    text-align: right;
+    float: right;
 }
 
 .second-title {
